--- a/EduFinancas/package.json
+++ b/EduFinancas/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
@@ -20,6 +21,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "nodemon": "^3.0.1"
   }
 }
